[package]
name = "db_server"
version = "0.1.0"
authors = ["byao001 <lnxyao@gmail.com>"]

[dependencies]
futures = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }

r2d2 = "0.7"
r2d2_postgres = "0.11"

serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"

futures-cpupool = "0.1"
rand = "0.3"